--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@huyn03/jquery.validate-mini",
+  "name": "jquery.validateMini",
   "version": "1.0.0",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://registry.npmjs.org/"
   },
   "description": "mini js script for form validation. You can add new custom and use it very easy.",
   "main": "index.html",
